gcc/testsuite/g++.dg/parse/defarg7.C
// PR c++/14361

class A {
  A ( int n=0 int n ); // { dg-error "" }
};
